@@ -24,43 +24,43 @@ public class CamundaTaskWaInitiationAdCollingendaTestProvider implements Argumen
     @Override
     public Stream<? extends Arguments> provideArguments(ExtensionContext context) throws Exception {
 
-            Map<String,Object> examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes
-                    = Map.of(
-                    "taskId", EXAMINE_DIGITAL_CASE_AD_COLLIGENDA_BONA_READY_TO_ISSUE,
-                    "name", AD_COLLIGENDA_BONA_TASK_TYPE_NAME,
-                    "processCategories", "case progression"
-            );
+        Map<String,Object> examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes
+                = Map.of(
+                "taskId", EXAMINE_DIGITAL_CASE_AD_COLLIGENDA_BONA_READY_TO_ISSUE,
+                "name", AD_COLLIGENDA_BONA_TASK_TYPE_NAME,
+                "processCategories", "case progression"
+        );
 
-            return Stream.of(
-                    Arguments.of(
-                            CHANGE_STATE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "adColligendaBona",
-                                    false, Collections.emptyList()),
-                            List.of(examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes)
-                    ),
-                    Arguments.of(
-                            RESOLVE_SME_REFERRAL_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "adColligendaBona",
-                                    false, Collections.emptyList()),
-                            List.of(examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes)
-                    ),
-                    Arguments.of(
-                            HANDLE_EVIDENCE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "adColligendaBona",
-                                    false, Collections.emptyList()),
-                            List.of(examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes)
-                    ),
-                    Arguments.of(
-                            BO_RESOLVE_STOP_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "adColligendaBona",
-                                    false, Collections.emptyList()),
-                            List.of(examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes)
-                    )
-            );
-        }
+        return Stream.of(
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        READY_TO_ISSUE_STATE,
+                        additionalData(false, "adColligendaBona",
+                                false, Collections.emptyList()),
+                        List.of(examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes)
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        READY_TO_ISSUE_STATE,
+                        additionalData(false, "adColligendaBona",
+                                false, Collections.emptyList()),
+                        List.of(examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes)
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        READY_TO_ISSUE_STATE,
+                        additionalData(false, "adColligendaBona",
+                                false, Collections.emptyList()),
+                        List.of(examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes)
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        READY_TO_ISSUE_STATE,
+                        additionalData(false, "adColligendaBona",
+                                false, Collections.emptyList()),
+                        List.of(examineDigitalCaseAdColligendaBonaReadyToIssueTaskAttributes)
+                )
+        );
+    }
 
 }
