@@ -28,135 +28,135 @@ public class CamundaTaskWaInitiationLeadingOrFollowingGrantTestProvider implemen
     @Override
     public Stream<? extends Arguments> provideArguments(ExtensionContext context) throws Exception {
 
-            Map<String,Object> examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes
-                    = Map.of(
-                    "taskId", EXAMINE_LEADING_OR_FOLLOWING_GRANTS,
-                    "name", EXAMINE_LEADING_OR_FOLLOWING_GRANTS_TASK_TYPE_NAME,
-                    "processCategories", "case progression"
-            );
+        Map<String,Object> examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes
+                = Map.of(
+                "taskId", EXAMINE_LEADING_OR_FOLLOWING_GRANTS,
+                "name", EXAMINE_LEADING_OR_FOLLOWING_GRANTS_TASK_TYPE_NAME,
+                "processCategories", "case progression"
+        );
 
-            return Stream.of(
-                    Arguments.of(
-                            HANDLE_EVIDENCE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true,
-                                    handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
-                            List.of(examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes)
-                    ),
-                    Arguments.of(
-                            HANDLE_EVIDENCE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",false,
-                                    handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            HANDLE_EVIDENCE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true,
-                                    handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            HANDLE_EVIDENCE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true, Collections.emptyList()),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            CHANGE_STATE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true,
-                                    handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
-                            List.of(examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes)
-                    ),
-                    Arguments.of(
-                            CHANGE_STATE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",false,
-                                    handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            CHANGE_STATE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true,
-                                    handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            CHANGE_STATE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true, Collections.emptyList()),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            RESOLVE_SME_REFERRAL_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true,
-                                    handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
-                            List.of(examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes)
-                    ),
-                    Arguments.of(
-                            RESOLVE_SME_REFERRAL_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",false,
-                                    handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            RESOLVE_SME_REFERRAL_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true,
-                                    handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            RESOLVE_SME_REFERRAL_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true, Collections.emptyList()),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            BO_RESOLVE_STOP_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true,
-                                    handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
-                            List.of(examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes)
-                    ),
-                    Arguments.of(
-                            BO_RESOLVE_STOP_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",false,
-                                    handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            BO_RESOLVE_STOP_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true,
-                                    handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            BO_RESOLVE_STOP_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalData(false, "",true, Collections.emptyList()),
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            HANDLE_EVIDENCE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            null,
-                            Collections.emptyList()
-                    ),
-                    Arguments.of(
-                            HANDLE_EVIDENCE_EVENT,
-                            READY_TO_ISSUE_STATE,
-                            additionalDataNoHandOffList(),
-                            Collections.emptyList()
-                    )
-            );
+        return Stream.of(
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true,
+                            handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
+                    List.of(examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes)
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",false,
+                            handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true,
+                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true, Collections.emptyList()),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    CHANGE_STATE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true,
+                            handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
+                    List.of(examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes)
+            ),
+            Arguments.of(
+                    CHANGE_STATE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",false,
+                            handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    CHANGE_STATE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true,
+                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    CHANGE_STATE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true, Collections.emptyList()),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    RESOLVE_SME_REFERRAL_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true,
+                            handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
+                    List.of(examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes)
+            ),
+            Arguments.of(
+                    RESOLVE_SME_REFERRAL_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",false,
+                            handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    RESOLVE_SME_REFERRAL_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true,
+                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    RESOLVE_SME_REFERRAL_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true, Collections.emptyList()),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    BO_RESOLVE_STOP_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true,
+                            handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
+                    List.of(examineDigitalCaseLeadingOrFollowingGrantsTaskAttributes)
+            ),
+            Arguments.of(
+                    BO_RESOLVE_STOP_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",false,
+                            handOffReasonListWithHandOffReason(leadingFollowingGrantsHandOffReason)),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    BO_RESOLVE_STOP_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true,
+                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    BO_RESOLVE_STOP_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "",true, Collections.emptyList()),
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    null,
+                    Collections.emptyList()
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalDataNoHandOffList(),
+                    Collections.emptyList()
+            )
+        );
     }
 
 }
